# web-scraping-info-of-authors-though-API-to-automate-the-mailing

./: .env.example  .gitignore  CLAUDE.md  END-TO-END-GUIDE.md  END-TO-END-UI-GUIDE.md  Hearing_loss_along_with_ear_infection_authors_with_emails.csv  Heart_authors_with_emails.csv  README.md  REPLY-TRACKING.md  Vascular_surgery_in_children_authors.csv  Vascular_surgery_in_children_authors_with_emails.csv  app.py  app1.py  autoMailApp.py  automateEmailing.py  for_automate_authentic_email_google_yahoo_office.py  jobs.py  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  scrapName.py  try.csv  try_results.csv  tryfilter.csv  universal.py  webscrap and email automation Process.txt
.claude/: launch.json
CLI_files/: automateEmailing.py  emailFilter.py  scrapName.py
backend/: alembic.ini
backend/alembic/: env.py
backend/icereach/: __init__.py  config.py  db.py  main.py
backend/tests/: conftest.py  test_ab_sendtime.py  test_ai.py  test_ai_router.py  test_analytics.py  test_apikeys.py  test_auth_flow.py  test_automation.py  test_automations_api.py  test_blocks.py  test_campaign_flow.py  test_contacts_api.py  test_db.py  test_dkim.py  test_dns_verify.py  test_dsn.py  test_esp.py  test_growth.py  (+20 more)
fancyMails/: fancy1.html  fancy2.html  fancy3.html  fancy4.html
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
newSampleTemplates/: temp1.html  temp2.html  temp3.html  temp4.html  temp5.html
templates/: email_filter.html  email_scraper.html  email_template.html  sampleTemplate.html  universalLayout.html  upload_form.html
(+99 files in other folders)
