[project]
name = "icereach"
version = "0.2.0"
description = "iceReach — multi-tenant, AI-assisted email platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn>=0.29,<0.32",
    "pydantic[email]>=2.6,<2.9",
    "pydantic-settings>=2.0,<2.4",
    "python-multipart>=0.0.9,<0.1.0",
    "dnspython",
    "python-dotenv>=1.0,<1.1",
    "httpx>=0.27,<0.29",
    "psutil",
    "pandas",
    "openpyxl",
    "sqlalchemy>=2.0",
    "alembic",
    "argon2-cffi",
    "itsdangerous",
    "dkimpy",
    "google-genai",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
